Label Administradora -> Adm | Detalhes

--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -248,7 +248,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="administradora" sticky>
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Adm | Detalhes </mat-header-cell>
                   <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer">
                     <span *ngIf="cotacao.tabela.categoria === 'Adesão'">
                       {{cotacao.tabela.administradora?.nome}}
@@ -408,7 +408,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="administradora" sticky>
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Adm | Detalhes </mat-header-cell>
                   <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer">
                     <span *ngIf="cotacao.tabela.categoria === 'Adesão'">
                       {{cotacao.tabela.administradora?.nome}}
@@ -568,7 +568,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="administradora" sticky>
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Adm | Detalhes </mat-header-cell>
                   <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer">
                     <span *ngIf="cotacao.tabela.categoria === 'Adesão'">
                       {{cotacao.tabela.administradora?.nome}}
@@ -728,7 +728,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="administradora" sticky>
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Administradora </mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Adm | Detalhes </mat-header-cell>
                   <mat-cell *matCellDef="let cotacao" [style.color]="'white'" [style.background-color]="cotacao.tabela.operadora.cor" class="mouse-pointer">
                     <span *ngIf="cotacao.tabela.categoria === 'Adesão'">
                       {{cotacao.tabela.administradora?.nome}}
