opção clear filters (é necessário pois setamos o filtro p continuar ativo caso feche o div)

--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -103,6 +103,9 @@
           <span>Filtrando Tabela</span>
 
           <span style="float: right; padding-left: 20px">
+          <a (click)="limparFiltro()">
+            <mat-icon class="mouse-pointer">cleaning_services</mat-icon>
+          </a>
           <a (click)="cancelarFiltro()">
             <mat-icon class="mouse-pointer">close</mat-icon>
           </a>
