--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -164,6 +164,9 @@
           <span>Filtrando Opções</span>
 
           <span style="float: right; padding-left: 20px">
+          <a (click)="limparFiltro()">
+            <mat-icon class="mouse-pointer">cleaning_services</mat-icon>
+          </a>
           <a (click)="cancelarFiltro()">
             <mat-icon class="mouse-pointer">close</mat-icon>
           </a>
