--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -156,6 +156,9 @@
           <span>Filtrando Produto</span>
 
           <span style="float: right; padding-left: 20px">
+          <a (click)="limparFiltro()">
+            <mat-icon class="mouse-pointer">cleaning_services</mat-icon>
+          </a>
           <a (click)="cancelarFiltro()">
             <mat-icon class="mouse-pointer">close</mat-icon>
           </a>
