--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -183,11 +183,16 @@
                 </mat-radio-button>
               </mat-radio-group>
             </div>
-
-            <div *ngIf="filtroOpcao.categoria === 'Empresarial'" style="width: 40%; text-align: right">
-              <mat-slide-toggle (ngModelChange)="filtraOpcao()" [(ngModel)]="filtroOpcao.mei"  labelPosition="before">MEI</mat-slide-toggle>
-            </div>
           </div>
+
+          <mat-form-field *ngIf="filtroOpcao.categoria === 'Empresarial'" appearance="outline" style="width: 100%">
+            <mat-label>MEI</mat-label>
+            <mat-select (ngModelChange)="filtraOpcao()" [(ngModel)]="filtroOpcao.mei">
+              <mat-option [value]="true">Mei</mat-option>
+              <mat-option [value]="false">Não Mei</mat-option>
+              <mat-option [value]="''">Ambos</mat-option>
+            </mat-select>
+          </mat-form-field>
 
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Estado</mat-label>
