Cotação: Profissoes deve virar chips, pois é no maximo 3 e procurar no olho nessa lista gigante nao rola (ja p Operadoras e Adm é ok) (deu foco no campo, já aprece opcoes, nao precisa digitar nada pra isso)

--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -92,7 +92,7 @@
 
             <mat-form-field *ngIf="isCotacaoAdesao()" appearance="outline" style="width: 33.33%">
               <mat-label>Profissões</mat-label>
-              <mat-chip-list #chipListProfissoes aria-label="Fruit selection">
+              <mat-chip-list #chipListProfissoes aria-label="Profissao" [required]="isCotacaoAdesao()">
                 <mat-chip
                   *ngFor="let profissao of filtroCotacao.profissoes"
                   (removed)="removeProfissao(profissao)">
@@ -113,16 +113,6 @@
                   {{profissao.nome}}
                 </mat-option>
               </mat-autocomplete>
-            </mat-form-field>
-
-            {{filtroCotacao.profissoes | json}}
-
-
-            <mat-form-field *ngIf="isCotacaoAdesao()" appearance="outline" style="width: 33.33%">
-              <mat-label>Profissões</mat-label>
-              <mat-select name="profissoes" [(ngModel)]="filtroCotacao.profissoes" [required]="isCotacaoAdesao()" multiple>
-                <mat-option *ngFor="let profissao of todasProfissoes" [value]="profissao">{{profissao.nome}}</mat-option>
-              </mat-select>
             </mat-form-field>
           </div>
 
