--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/cotacao" class="mouse-pointer">
+      <mat-list-item routerLink="/cotacao/nova" class="mouse-pointer">
         <mat-icon class="icon-spacer">query_stats</mat-icon>
         Cotaçao
       </mat-list-item>
