--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -53,8 +53,8 @@
             <mat-form-field *ngIf="isCotacaoEmpresarial()" appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33%'">
               <mat-label>Tipo Adesão</mat-label>
               <mat-select name="tipoAdesao" [(ngModel)]="filtroCotacao.tipoAdesao">
-                <mat-option [value]="'livreAdesao'">Livre Adesão</mat-option>
-                <mat-option [value]="'compulsoria'">Compulsória</mat-option>
+                <mat-option [value]="'Livre Adesão'">Livre Adesão</mat-option>
+                <mat-option [value]="'Compulsória'">Compulsória</mat-option>
               </mat-select>
             </mat-form-field>
 
@@ -63,14 +63,14 @@
               <mat-select name="coparticipacao" [(ngModel)]="filtroCotacao.coparticipacao">
                 <mat-option [value]="false">Sem</mat-option>
                 <mat-option [value]="true">Com</mat-option>
-                <mat-option [value]="''">Ambas</mat-option>
+                <mat-option [value]="'Ambas'">Ambas</mat-option>
               </mat-select>
             </mat-form-field>
 
             <mat-form-field appearance="outline" [style.width]="isCotacaoEmpresarial() ? '25%' : '33.3%'">
               <mat-label>Acomodação</mat-label>
               <mat-select name="acomodacao" [(ngModel)]="filtroCotacao.acomodacao">
-                <mat-option [value]="''">Ambas</mat-option>
+                <mat-option [value]="'Ambas'">Ambas</mat-option>
                 <mat-option *ngFor="let acomodacao of todasAcomodacoes;" [value]="acomodacao">{{acomodacao}}</mat-option>
               </mat-select>
             </mat-form-field>
