--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,62 +7,62 @@
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/cotacao/nova" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrVendedor()" routerLink="/cotacao/nova" class="mouse-pointer">
         <mat-icon class="icon-spacer">query_stats</mat-icon>
         Cotaçao
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/opcoes" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrOperador()" routerLink="/opcoes" class="mouse-pointer">
         <mat-icon class="icon-spacer">mediation</mat-icon>
         Opcoes
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/tabela" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrOperador()" routerLink="/tabela" class="mouse-pointer">
         <mat-icon class="icon-spacer">table_chart</mat-icon>
         Tabela
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/produtos" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrOperador()" routerLink="/produtos" class="mouse-pointer">
         <mat-icon class="icon-spacer">book</mat-icon>
         Produtos
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/hospitais" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrOperador()" routerLink="/hospitais" class="mouse-pointer">
         <mat-icon class="icon-spacer">local_hospital</mat-icon>
         Hospitais
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/laboratorios" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrOperador()" routerLink="/laboratorios" class="mouse-pointer">
         <mat-icon class="icon-spacer">science</mat-icon>
         Laboratorios
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/entidades" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrOperador() || isUsrPosVendas()" routerLink="/entidades" class="mouse-pointer">
         <mat-icon class="icon-spacer">groups</mat-icon>
         Entidades
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/profissoes" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrOperador() || isUsrPosVendas()" routerLink="/profissoes" class="mouse-pointer">
         <mat-icon class="icon-spacer">business_center</mat-icon>
         Profissoes
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/operadoras" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrOperador()" routerLink="/operadoras" class="mouse-pointer">
         <mat-icon class="icon-spacer">corporate_fare</mat-icon>
         Operadoras
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/administradoras" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin() || isUsrOperador()" routerLink="/administradoras" class="mouse-pointer">
         <mat-icon class="icon-spacer">business</mat-icon>
         Administradoras
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/usuarios" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin()" routerLink="/usuarios" class="mouse-pointer">
         <mat-icon class="icon-spacer">manage_accounts</mat-icon>
         Usuarios
       </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item routerLink="/auditoria" class="mouse-pointer">
+      <mat-list-item *ngIf="isUsrAdmin()" routerLink="/auditoria" class="mouse-pointer">
         <mat-icon class="icon-spacer">security</mat-icon>
         Auditoria
       </mat-list-item>
