--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,11 @@
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-divider></mat-divider>
+      <mat-list-item routerLink="/home" class="mouse-pointer">
+        <mat-icon class="icon-spacer">home</mat-icon>
+        Home
+      </mat-list-item>
+      <mat-divider></mat-divider>
       <mat-list-item *ngIf="isUsrAdmin() || isUsrVendedor()" routerLink="/cotacao/nova" class="mouse-pointer">
         <mat-icon class="icon-spacer">query_stats</mat-icon>
         Cotaçao
