Botões [Cotar, ModoCliente e MelhorPreço] devem descer (ao lado ou abaixo de Idades, onde ficar mlehor)

--- a/src/app/components/cotacao/cotacao.component.html
+++ b/src/app/components/cotacao/cotacao.component.html
@@ -192,7 +192,7 @@
           </div>
 
           <div style="text-align: center">
-            <span style="padding-left: 20px">
+            <span>
               <mat-slide-toggle name="melhorPrecoProduto" (ngModelChange)="modelChangeMelhorPreco()" [(ngModel)]="melhorPrecoProduto" labelPosition="before">Melhor Preço</mat-slide-toggle>
             </span>
             <span style="padding-left: 20px">
